serveral small changes
1. Category rename to ArtCollection
2. write puzzle background color into ArtCollection.json
3. refactor progress save mech, use json to serialization
4. color from/to string
5. add shader feature _USE_CIRCLE_ALPHA to choose between two color fading algorithm

--- a/Assets/Resources/Configs/Config.json
+++ b/Assets/Resources/Configs/Config.json
@@ -21,12 +21,7 @@
     },
     "wireframe": {
         "width": 0.8500000238418579,
-        "color": {
-            "r": 200,
-            "g": 200,
-            "b": 200,
-            "a": 255
-        }
+        "color": "c8c8c8"
     },
     "snapshotSize": {
         "x": 256,
