1. resource pipeline will use BoxCollider instead of MeshCollider 2. auto save in 2 seconds when puzzle progress is changed

--- a/Assets/Res/Configs/Config.json
+++ b/Assets/Res/Configs/Config.json
@@ -10,7 +10,8 @@
         "moveSpeed": 30.0,
         "fadeSpeed": 15.0,
         "fitThreshold": 50.0,
-        "finishDebrisMoveSpeed": 10.0
+        "finishDebrisMoveSpeed": 10.0,
+        "saveInterval": 2.0
     },
     "camera": {
         "distance": 1001.0,
