--- a/UIProject/assets/Main/package.xml
+++ b/UIProject/assets/Main/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <packageDescription id="9239j664" jpegQuality="80" compressPNG="true">
   <resources>
-    <image id="sw070" name="autumn-studio-407865.png" path="/images/Background/"/>
+    <image id="sw070" name="autumn-studio-407865.png" path="/images/Background/" scale="" atlas="alone_npot"/>
     <image id="sw071" name="bg1.png" path="/images/Background/"/>
     <image id="sw072" name="button_bg_b.png" path="/images/Buttons/Big/blue/"/>
     <image id="sw073" name="button_bg_down_b.png" path="/images/Buttons/Big/blue/"/>
@@ -212,10 +212,12 @@
     <image id="sw075s" name="avatar6.png" path="/images/User/"/>
     <image id="sw075t" name="avatar7.png" path="/images/User/"/>
     <component id="sw075u" name="ScreenFader.xml" path="/" exported="true"/>
-    <image id="sw075v" name="fader.png" path="/images/" scale=""/>
+    <image id="sw075v" name="fader.png" path="/images/" scale="9grid" scale9grid="4,4,8,8" duplicatePadding="true"/>
     <component id="x1cc5w" name="Background.xml" path="/" exported="true"/>
     <component id="x1cc5x" name="MenuPanel.xml" path="/" exported="true"/>
     <component id="x1cc5y" name="MenuButton.xml" path="/widgets/"/>
+    <component id="x1cc60" name="PuzzlePanel.xml" path="/" exported="true"/>
+    <component id="x1cc61" name="RoundButton.xml" path="/widgets/"/>
   </resources>
   <publish name="Main"/>
 </packageDescription>
