--- a/UIProject/assets/Main/package.xml
+++ b/UIProject/assets/Main/package.xml
@@ -218,6 +218,9 @@
     <component id="x1cc5y" name="MenuButton.xml" path="/widgets/"/>
     <component id="x1cc60" name="PuzzlePanel.xml" path="/" exported="true"/>
     <component id="x1cc61" name="RoundButton.xml" path="/widgets/"/>
+    <component id="qvgi62" name="PuzzleGroupView.xml" path="/widgets/"/>
+    <component id="qvgi63" name="PuzzleItem.xml" path="/widgets/"/>
+    <component id="qvgi64" name="PuzzleGroupViewPanel.xml" path="/" exported="true"/>
   </resources>
   <publish name="Main"/>
 </packageDescription>
