--- a/UIProject/assets/Main/package.xml
+++ b/UIProject/assets/Main/package.xml
@@ -221,6 +221,12 @@
     <component id="qvgi62" name="PuzzleGroupView.xml" path="/widgets/"/>
     <component id="qvgi63" name="PuzzleItem.xml" path="/widgets/"/>
     <component id="qvgi64" name="ArtCollectionPanel.xml" path="/" exported="true"/>
+    <image id="r06j65" name="SnapshotMask0.png" path="/images/Snapshot Masks/"/>
+    <image id="r06j66" name="SnapshotMask1.png" path="/images/Snapshot Masks/"/>
+    <image id="r06j67" name="SnapshotMask2.png" path="/images/Snapshot Masks/"/>
+    <image id="r06j68" name="SnapshotMask3.png" path="/images/Snapshot Masks/"/>
+    <image id="r06j69" name="SnapshotMask4.png" path="/images/Snapshot Masks/"/>
+    <image id="r06j6a" name="SnapshotMask5.png" path="/images/Snapshot Masks/"/>
   </resources>
   <publish name="Main"/>
 </packageDescription>
