--- a/UIProject/assets/Main/package.xml
+++ b/UIProject/assets/Main/package.xml
@@ -227,6 +227,9 @@
     <image id="r06j68" name="SnapshotMask3.png" path="/images/Snapshot Masks/"/>
     <image id="r06j69" name="SnapshotMask4.png" path="/images/Snapshot Masks/"/>
     <image id="r06j6a" name="SnapshotMask5.png" path="/images/Snapshot Masks/"/>
+    <component id="ew9j6b" name="ShowAllPanel.xml" path="/" exported="true"/>
+    <component id="ew9j6c" name="TestItem.xml" path="/widgets/"/>
+    <component id="x5p16d" name="MyWorksPanel.xml" path="/" exported="true"/>
   </resources>
   <publish name="Main"/>
 </packageDescription>
